Apply code changes done while Maven Wrapper was module of Maven Core